--- a/css/main.css
+++ b/css/main.css
@@ -26,10 +26,6 @@
     margin: 0 0 10px 0;
 }
 
-.canvas-container canvas {
-    flex: 0 1 500px;
-}
-
 @media screen and (min-width: 992px) {
     .canvas-container {
         flex-direction: row;
@@ -59,6 +55,7 @@ button {
     border-radius: .25rem;
     font-weight: 400;
     font-family: 'Roboto', sans-serif;
+    background-color: white;
 }
 
 span.code {
