Clear Spiro canvas on update. Change colors.

--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,9 @@
 .spiro-container {
-    background-color: #f4a261;
+    background-color: #4C5454;
 }
 
 ._10print-container {
-    background-color: #e9c46a;
+    background-color: #EF8354;
 }
 
 ._10print-container h2 {
