--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,7 @@
 
 .canvas-container .about {
     flex: 1;
-    padding: 15px 30px;
+    padding: 30px;
     font-size: 1.2em;
     align-self: flex-start;
     margin-bottom: 15px;
