--- a/css/main.css
+++ b/css/main.css
@@ -64,7 +64,11 @@ input[type="text" i] {
     font-family: 'Roboto', sans-serif;
 }
 
-button {
+.control .row {
+    margin: 8px 0;
+}
+
+.control button {
     border: 2px solid white;
     padding: .375rem .75rem;
     border-radius: .25rem;
@@ -74,12 +78,12 @@ button {
     color: inherit;
 }
 
-button:active {
+.control button:active {
     color: var(--mainColor);
     background-color: var(--textColor);
 }
 
-button:focus {
+.control button:focus {
     outline: none;
 }
 
